<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/btn_init"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/init"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textAllCaps="false" />


    <Button
        android:id="@+id/btn_get_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_current_player"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_player_event_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitplayerevent_begin"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_player_event_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitplayerevent_end"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_player_extra_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/getplayerextrainfo"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_iap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/in_app_purchases"/>

    <EditText
        android:id="@+id/LogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:autofillHints="Logs" />

</LinearLayout>